[gd_scene load_steps=2 format=3 uid="uid://cxwy28o2fnsrx"]

[ext_resource type="Script" uid="uid://cy2rny6f0pldg" path="res://InventoryUI.gd" id="1_dsn3v"]

[node name="CanvasLayer" type="CanvasLayer"]

[node name="InventoryUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 136.0
offset_top = 83.0
offset_right = 136.0
offset_bottom = 83.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.505177, 0.505177)
script = ExtResource("1_dsn3v")

[node name="Background" type="ColorRect" parent="InventoryUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -453.306
offset_top = -271.192
offset_right = -453.306
offset_bottom = -271.192
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2.72972, 3.0594)
color = Color(0, 0, 0, 0.7)

[node name="MainContainer" type="HBoxContainer" parent="InventoryUI"]
custom_minimum_size = Vector2(600, 400)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -212.451
offset_top = -242.975
offset_right = 387.549
offset_bottom = 157.025
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Spacer" type="Control" parent="InventoryUI/MainContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="HandPanel" type="VBoxContainer" parent="InventoryUI/MainContainer"]
custom_minimum_size = Vector2(250, 350)
layout_mode = 2

[node name="HandLabel" type="Label" parent="InventoryUI/MainContainer/HandPanel"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Hand"
horizontal_alignment = 1

[node name="HandGrid" type="GridContainer" parent="InventoryUI/MainContainer/HandPanel"]
layout_mode = 2
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 3

[node name="InventoryPanel" type="VBoxContainer" parent="InventoryUI/MainContainer"]
custom_minimum_size = Vector2(250, 350)
layout_mode = 2

[node name="InventoryLabel" type="Label" parent="InventoryUI/MainContainer/InventoryPanel"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Inventory"
horizontal_alignment = 1

[node name="InventoryGrid" type="GridContainer" parent="InventoryUI/MainContainer/InventoryPanel"]
layout_mode = 2
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 2

[node name="CloseButton" type="Button" parent="InventoryUI"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -616.914
offset_top = -49.4876
offset_right = -536.914
offset_bottom = -9.48761
grow_horizontal = 0
text = "Close (I)"

[connection signal="pressed" from="InventoryUI/CloseButton" to="InventoryUI" method="_on_close_button_pressed"]
